# signalk-rserver

./: Cargo.toml  README.md
docs/: anno_system_context.puml  context.puml
rest_tests/: server_info.http  signak_full_api.http
src/: lib.rs  main.rs  signalk.rs
src/signalk/: definitions.rs  discovery.rs  electrical.rs  environment.rs  full.rs  mod.rs  navigation.rs  notification.rs  propulsion.rs  put.rs  sources.rs  subscribe.rs  unsubscribe.rs  vessel.rs
tests/: delta_format_samples.rs  full_format_doc_example.rs  hello_samples.rs  put_samples.rs  sample_discovery_messages.rs  sample_hello_messages.rs  subscribe_samples.rs  unsubscribe_samples.rs
